--- a/设置第一次访问.md
+++ b/设置第一次访问.md
@@ -1,1 +1,47 @@
-﻿```jQuery(function(){		if (Mage.Cookies.get('zouzeiClose')) return;		var t = new Date().getTime(),o,c;		//设置第一次访问时间		if(!Mage.Cookies.get('zouzeiPopup')){			Mage.Cookies.set('zouzeiPopup', new Date().getTime(), new Date(new Date().getTime() + 86400 * 1000));		}		//获取第一次访问时间		if(Mage.Cookies.get('zouzeiPopup')){			o = Mage.Cookies.get('zouzeiPopup');			c = parseInt((t - o)/1000);			if(c > 15){				jQuery("#zouzeiPopup").css("display","flex");			}		}		jQuery(".close,#zouzeiPopup").click(function(){			jQuery("#zouzeiPopup").hide();			Mage.Cookies.set('zouzeiClose', 1, new Date(new Date().getTime() + 86400 * 1000));		});	});```
+﻿```
+jQuery(function(){
+		if (Mage.Cookies.get('zouzeiClose')) return;
+		var t = new Date().getTime(),o,c;
+		//设置第一次访问时间
+		if(!Mage.Cookies.get('zouzeiPopup')){
+			Mage.Cookies.set('zouzeiPopup', new Date().getTime(), new Date(new Date().getTime() + 86400 * 1000));
+		}
+		//获取第一次访问时间
+		if(Mage.Cookies.get('zouzeiPopup')){
+			o = Mage.Cookies.get('zouzeiPopup');
+			c = parseInt((t - o)/1000);
+			if(c > 15){
+				jQuery("#zouzeiPopup").css("display","flex");
+			}
+		}
+		jQuery(".close,#zouzeiPopup").click(function(){
+			jQuery("#zouzeiPopup").hide();
+			Mage.Cookies.set('zouzeiClose', 1, new Date(new Date().getTime() + 86400 * 1000));
+		});
+	});
+```
+<style type="text/css">
+#zouzeiPopup{
+	position: fixed;
+    z-index: 9;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+	background: rgba(0, 0, 0, 0.3);
+}
+#zouzeiPopup .content{
+	position: relative;
+}
+#zouzeiPopup .content .c{}
+#zouzeiPopup .content .close{
+	cursor: pointer;
+	position: absolute;
+    right: 0;
+    top: 0;
+}
+</style>
+
